--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,13 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.24",
+    "@types/react-bootstrap": "^0.32.31",
     "@types/react-dom": "^18.0.8",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "mobx": "^6.6.2",
     "mobx-react-lite": "^3.4.0",
+    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
