--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.0.8",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "jwt-decode": "^3.1.2",
     "mobx": "^6.6.2",
     "mobx-react-lite": "^3.4.0",
     "node-sass": "^7.0.3",
